--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body {
           justify-content: center;
   background-color: black;
   color: white;
-  overflow-x: hidden;
 }
 
 header {
@@ -53,6 +52,7 @@ header ul {
   background-image: url("images/background.jpg");
   background-position: 100% 100%;
   min-height: 100vh;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -62,6 +62,7 @@ header ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: hidden;
 }
 
 .white-section {
@@ -120,12 +121,12 @@ header ul {
 
 .rocketTwo {
   position: absolute;
-  width: 20%;
-  left: 110%;
-  top: 100%;
   -webkit-transform: rotate(200deg);
           transform: rotate(200deg);
   z-index: 0;
+  width: 20%;
+  top: 0;
+  right: -30%;
 }
 
 .about-us {
