--- a/styles.scss
+++ b/styles.scss
@@ -1,178 +1,174 @@
 body {
-    //TEST
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: black;
-    color: white;
+  //TEST
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: black;
+  color: white;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    background-color: transparent;
-    color: white;
-    padding: 30px;
-    width: 90%;
-    z-index: 1;
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: transparent;
+  color: white;
+  padding: 30px;
+  width: 90%;
+  z-index: 1;
 
-    img {
-        width: 200px;
-    }
+  img {
+    width: 200px;
+  }
 
-    ul {
-        text-align: center;
-        list-style: none;
-    }
+  ul {
+    text-align: center;
+    list-style: none;
+  }
 }
 
 .space-section {
-    background-image: url("images/background.jpg");
-    background-position: 100% 100%;
-    min-height: 100vh;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+  background-image: url("images/background.jpg");
+  background-position: 100% 100%;
+  min-height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .white-section {
-    background-color: white;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  background-color: white;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
+  padding-top: 100px;
+  margin: auto;
+  padding: 20px;
 
-    padding-top: 100px;
-    margin: auto;
-    padding: 20px;
+  font-size: 2em;
 
-    font-size: 2em;
-
-    img {
-        text-align: center;
-        width: 20%;
-    }
+  img {
+    text-align: center;
+    width: 20%;
+  }
 }
 
-
 .astronaut {
-    fill: white;
-    width: 15%;
-    left: 150px;
-    position: absolute;
+  fill: white;
+  width: 15%;
+  left: 150px;
+  position: absolute;
 }
 
 .rocket {
-    position: absolute;
-    width: 20%;
+  position: absolute;
+  width: 20%;
 }
 
 #rocketOne {
-    top: 300px;
-    right: 300px;
+  top: 300px;
+  right: 300px;
 }
 
 #rocketTwo {
-    transform: rotate(200deg);
-    top: 0;
-    right: -30%; 
+  transform: rotate(200deg);
+  top: 0;
+  right: -30%;
 }
 
 .about-us {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    h2 {
-        font-size: 3em;
-    }
+  h2 {
+    font-size: 3em;
+  }
 }
 .profiles {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .profile {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  z-index: 1;
 
-    img {
-        border-radius: 50%;
-    }
+  img {
+    border-radius: 50%;
+  }
 
-    p {
-        text-align: center;
-    }
+  p {
+    text-align: center;
+  }
 }
 
 .profile-pic {
-    width: 50%;
+  width: 50%;
 }
 
 @media only screen and (max-width: 768px) {
+  .text img {
+    width: 60%;
+  }
 
-    .text img {
-        width: 60%;
-    }
+  .astronaut {
+    bottom: 10%;
+    left: 10%;
+    width: 30%;
+  }
 
-    .astronaut {
-        bottom: 10%;
-        left: 10%;
-        width: 30%;
-    }
-
-    .rocket {
-        right: 100px;
-        bottom: 0;
-    }
+  .rocket {
+    right: 100px;
+    bottom: 0;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
+  header img {
+    width: 100px;
+  }
 
-    header img {
-        width: 100px;
-    }
+  .text img {
+    width: 60%;
+  }
 
-    .text img {
-        width: 60%;
-    }
+  .astronaut {
+    bottom: 20px;
+    width: 30%;
+  }
 
-    .astronaut {
-        bottom: 20px;
-        width: 30%;
-    }
+  .rocket {
+    right: 75px;
+    bottom: 250px;
+  }
 
-    .rocket {
-        right: 75px;
-        bottom: 250px;
-    }
+  .profiles {
+    flex-wrap: wrap;
+  }
 
-    .profiles {
-        flex-wrap: wrap;
-    }
-
-    .profile img {
-        width: 30%;
-    }
+  .profile img {
+    width: 30%;
+  }
 }
